--- a/src/Sy.Avalonia.Material/Sy.Avalonia.Material.csproj
+++ b/src/Sy.Avalonia.Material/Sy.Avalonia.Material.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Avalonia" Version="11.2.3" />
     <PackageReference Include="Material.Icons.Avalonia" Version="2.1.10" />
+    <PackageReference Include="MaterialColorUtilities" Version="0.3.0" />
   </ItemGroup>
 
   <ItemGroup>
